# game-of-life

./: .gitignore  CMakeLists.txt  Graph.ipynb  README.md
include/: exchange.hpp  game_of_life.hpp  game_rules.hpp  generation.hpp  generation_saver.hpp  main.hpp  printers.hpp  utils.hpp  validation.hpp  window.hpp
src/: game_of_life.cpp  generation.cpp  generation_saver.cpp  main.cpp  utils.cpp  window.cpp
